Make the menu scrollable

--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href=".">M.No2Bio</a>
-          <div class="nav-collapse collapse">
+          <a class="navbar-brand" href=".">m.No2Bio.org</a>
+          <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li class="active"><a href="index.html">בית</a></li>
                   <li class="dropdown">
