--- a/html/post-bio-ad-meme.html
+++ b/html/post-bio-ad-meme.html
@@ -155,7 +155,7 @@
             <p dir="rtl">הנה שני מימים על בסיס הקמפיין של ניסוי המאגר הביומטרי, שהוסיפו להם סיסמאות  באתר drpm.me.</p>
 <p dir="rtl">לחצו על תמונה כדי להגיע לדף המים שלה.</p>
 <p dir="rtl">אפשר להפיץ אותם, או ליצור אחרים עם סיסמאות משלכם.</p>
-<table border="0">
+<table border="0" class="table">
 <tbody>
 <tr>
 <td>
