--- a/html/post-jerome-bordon.html
+++ b/html/post-jerome-bordon.html
@@ -153,7 +153,7 @@
         <div class="row">
           <div class="span12">
             <p dir="rtl">פרופ&#8217; ג&#8217;רום בורדון, מחותמי מכתב האקדמאים, הוא ראש החוג לתקשורת באוניברסיטת תל אביב.</p>
-<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/nyjjVRrAPqM?rel=0&amp;cc_lang_pref=he" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/nyjjVRrAPqM?rel=0&amp;cc_lang_pref=he" height="253" width="450" style="max-width:100%" allowfullscreen="" frameborder="0"></iframe></p>
 <p dir="rtl">מתוך הווידאו:</p>
 <p dir="rtl">&#8220;מאגר ביומטרי נותן למדינה המון כוח לפקח על האזרחים, כל האזרחים, כולל אזרחים חפים מפשע, בזמן שאין שום צורך בזה&#8230; אנשי אקדמיה מכל מיני תחומים &#8211; משפטים, מיחשוב, מדעי המדינה, תקשורת &#8211; התגייסו נגד המאגר הביומטרי בגלל שזה לא נושא של ימין או שמאל, הוא לא משהו שקשור לעמדה ספציפית לגבי הדמוקרטיה. הוא קשור למהות הדמוקרטיה&#8230; אזרח יכול להתנגד לזה בכל מיני צורות: קודם כל לסרב לשתף פעולה עם הדבר הזה, לא לתת נתונים ביומטריים שמבקשים ממנו בכל מיני הקשרים אלא אם זה לפי החוק והוא חייב, אבל אל תעשו את זה, אל תתנו נתונים ביומטריים”.</p>
 <style type="text/css"><!--
