--- a/html/post-amir-hertzberg.html
+++ b/html/post-amir-hertzberg.html
@@ -153,7 +153,7 @@
         <div class="row">
           <div class="span12">
             <p dir="rtl">פרופ&#8217; הרצברג, מחותמי <a href="http://no2bio.org/letters-to-knesset/" target="_blank">מכתב המדענים</a>, הוא ראש קבוצה שעוסקת במחקרים בנושאי אבטחה, תקשורת והגנה מפני פריצות במחלקה למדעי המחשב באוניברסיטת בר אילן,</p>
-<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/AhOFFy2ei2c?rel=0&amp;cc_lang_pref=he" height="315" width="560" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/AhOFFy2ei2c?rel=0&amp;cc_lang_pref=he" height="315" width="560" style="max-width:100%" allowfullscreen="" frameborder="0"></iframe></p>
 <p dir="rtl">ראיון עם פרופ&#8217; הרצברג בנושא המאגר הביומטרי. מרץ 2013</p>
 <p dir="rtl"><strong>לא לעתים קרובות רואים התגייסות כה גורפת של אנשי אקדמיה נגד יוזמה פוליטית בעיקרה. למה לדעתך זה קורה דווקא בנושא המאגר?</strong></p>
 <p dir="rtl">ההתנגדות כאן היא לא על רקע פוליטי קלאסי, אלא על רקע אזרחי טהור, ואפילו יש לו היבטים טכנולוגיים וארוכי טווח שיש יסוד לחשוש שהמחוקקים עלולים לא להיות מודעים אליהם. לכן יש הצדקה להתבטאות אקדמית שבאה מתוך רצון להבטיח שהחלטות מתקבלות מתוך מודעות למשמעויות של ההיבטים המקצועיים, בניגוד להתבטאויות בנושאים ששנויים במחלוקת פוליטית.</p>
