--- a/html/post-eli-biham.html
+++ b/html/post-eli-biham.html
@@ -153,7 +153,7 @@
         <div class="row">
           <div class="span12">
             <p dir="rtl">פרופ&#8217; אלי ביהם, דיקן הפקולטה למדעי המחשב בטכניון ומומחה בעל שם עולמי להצפנה ואבטחת מידע, יזם את &#8220;<a href="http://no2bio.org/letters-to-knesset/" target="_blank">מכתב המדענים</a>&#8221; לכנסת ונחשב לאחד המתנגדים הבולטים ביותר למאגר הביומטרי.</p>
-<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/V2KinheAa84?rel=0" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/V2KinheAa84?rel=0" height="253" width="450" style="max-width:100%" allowfullscreen="" frameborder="0"></iframe></p>
 <p dir="rtl"><strong>מתוך הווידאו:</strong></p>
 <p dir="rtl">&#8220;מאגר המידע הזה הוא קטסטרופה. אפילו אם הייתי מסכים שבתעודה יהיו הנתונים הביומטריים, מאגר הם לא צריכים. אם המאגר הזה דולף, והחוק מרשה לו לדלוף, בניגוד לכל מה שתשמע מאחרים, כל אחד יכול לעקוב אחרי, לבדוק דברים וכו&#8217;, בצורה שעד היום לא היתה אפשרית”.</p>
 <p dir="rtl"><strong>פרופ&#8217; ביהם על המאגר הביומטרי:</strong></p>
