--- a/html/post-karine-nahon.html
+++ b/html/post-karine-nahon.html
@@ -153,7 +153,7 @@
         <div class="row">
           <div class="span12">
             <p dir="rtl"><a href="https://twitter.com/karineb" target="_blank">פרופ&#8217; נהון</a> היא מיוזמי וחותמי העתירה לבג&#8221;צ נגד חוק המאגר הביומטרי. נהון היא חוקרת וחברת סגל קבועה בבית הספר למידע באוניברסיטת וושינגטון, חברת סגל בחוג לתקשורת באוניברסיטת וושינגטון וראש מרכז אספר ליזמות באוניברסיטה העברית. היא ייצגה את ישראל בוועדת המדע והטכנולוגיה לפיתוח באו&#8221;ם.</p>
-<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/p4hdv2FUc08?rel=0&amp;cc_lang_pref=he" height="253" width="450" allowfullscreen="" frameborder="0"></iframe></p>
+<p dir="rtl"><iframe src="//www.youtube-nocookie.com/embed/p4hdv2FUc08?rel=0&amp;cc_lang_pref=he" height="253" width="450" style="max-width:100%" allowfullscreen="" frameborder="0"></iframe></p>
 <p dir="rtl">מתוך הווידאו:</p>
 <p dir="rtl">&#8220;יש סכנות רבות למאגר ביומטרי. הגדולה ביותר היא קודם כל פגיעה בביטחון. הביטחון שלנו כאזרחים וגם כקבוצות&#8230; סכנה נוספת היא פגיעה חמורה בפרטיות של האזרחים ביומיום. בשילוב עם טכנולוגיות אחרות ניתן למעשה לעשות שימושים מאוד מסוכנים בדמוקרטיות, כמו למשל לזהות קבוצות. יש כמובן גם חיסרון פסיכולוגי &#8211; כשאנחנו יודעים שעוקבים אחרינו אנחנו נוטים להתנהג אחרת&#8230;&#8221;</p>
 <p dir="rtl">&#8220;כל אדם שמשתמש במאגר, במידע הזה, בצורה קצת שונה ממה שהחוק נותן&#8230; מבחינתנו זו סכנה. אני חושבת שכשהחוק עבר, הח&#8221;כים של הכנסת ה-18 לא היו מודעים לכל ההשלכות, גם הבטחוניות וגם על זכויות אדם, של המאגר הביומטרי. אני מאוד מקווה שבכנסת הנוכחית, ולאור ההתעוררות הציבורית, האקדמית, תהיה מודעות גדולה יותר, ועם זה גם תהיה איזושהי פעילות של הח&#8221;כים כדי להחליף את החוק או לשנות אותו במתכונתו הנוכחית”.</p>
