--- a/html/post-letters-to-knesset.html
+++ b/html/post-letters-to-knesset.html
@@ -158,7 +158,7 @@
 <li><a href="#scientists">מכתב המדענים לכנסת</a></li>
 <li><a href="#academics">מכתב האקדמאים לכנסת</a></li>
 </ul>
-<div class="wp-caption aligncenter" style="width: 516px"><a href="https://secure.flickr.com/photos/iraabramov/3767832589" target="_blank"><img class=" " alt="ידיעות אחרונות 29/7/2009" src="https://farm3.staticflickr.com/2589/3767832589_996895f37d_b_d.jpg" width="506" height="1024" /></a><p class="wp-caption-text">ידיעות אחרונות 29/7/2009</p></div>
+<div class="wp-caption aligncenter" style="width: 516px"><a href="https://secure.flickr.com/photos/iraabramov/3767832589" target="_blank"><img class=" " alt="ידיעות אחרונות 29/7/2009" src="https://farm3.staticflickr.com/2589/3767832589_996895f37d_b_d.jpg" width="506" height="1024" style="max-width:100%" /></a><p class="wp-caption-text">ידיעות אחרונות 29/7/2009</p></div>
 <h4 dir="rtl" id="scientists"><a href="#toc">מכתב המדענים לכנסת</a></h4>
 <p dir="rtl">יולי 2009</p>
 <p dir="rtl">כבוד חברי הכנסת,</p>
