Added "mutilated body" post
The horror

--- a/html/post-catching-criminal.html
+++ b/html/post-catching-criminal.html
@@ -37,6 +37,8 @@
 
                           <li class="active"><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
+                          <li><a href="post-the-mutilated-body-argument.html">האם מאגר ביומטרי יקל על זיהוי גופתי אם תבותר?</a></li>
+
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
                           <li><a href="post-database-uses.html">למה ישמש המאגר?</a></li>
