--- a/html/post-the-mutilated-body-argument.html
+++ b/html/post-the-mutilated-body-argument.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - עדכוני נו2ביו</title>
+    <title>m.No2Bio - האם מאגר ביומטרי יקל על זיהוי גופתי אם תבותר?</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
@@ -25,7 +25,7 @@
           <div class="nav-collapse collapse navbar-resonsive-collapse" style="overflow-y: scroll;max-height:400px">
             <ul class="nav navbar-nav">
                   <li><a href="index.html">בית</a></li>
-                  <li class="dropdown">
+                  <li class="dropdown active">
                       <a data-toggle="dropdown" href="#">לשאול<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
@@ -37,7 +37,7 @@
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
-                          <li><a href="post-the-mutilated-body-argument.html">האם מאגר ביומטרי יקל על זיהוי גופתי אם תבותר?</a></li>
+                          <li class="active"><a href="post-the-mutilated-body-argument.html">האם מאגר ביומטרי יקל על זיהוי גופתי אם תבותר?</a></li>
 
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
@@ -125,11 +125,11 @@
                           <li><a href="post-karine-nahon.html">פרופ’ קרין נהון</a></li>
                       </ul>
                   </li>
-                  <li class="dropdown active">
+                  <li class="dropdown">
                       <a data-toggle="dropdown" href="#">דיווחים<b class="caret"></b></a>
                       <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
                         
-                          <li class="active"><a href="updates.html">עדכוני נו2ביו</a></li>
+                          <li><a href="updates.html">עדכוני נו2ביו</a></li>
 
                           <li><a href="bloggers.html">דעות ברשת</a></li>
                       </ul>
@@ -147,7 +147,26 @@
 
       <!-- Begin page content -->
       <div class="container">
-        <p align="center"><iframe style="width:100%" width="300" height="9999" src="http://bloggers.no2bio.org/widget-archive" frameborder="0"></iframe></p>
+        <div class="page-header text-center">
+          <div class="span12">
+            <h2>האם מאגר ביומטרי יקל על זיהוי גופתי אם תבותר?</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <p dir="rtl">יש כאלה ש[בין אם בצדק או לא], אין להם זכות לפרטיות. במקרים כאלה, ההתעלמות מהפרטיות שלהם עשויה להיות פרקטית (לפעמים אפילו עבורם):</p>
+<ul>
+<li dir="rtl">אם תשתיל/י לכלבך צ&#8217;יפ, אפשר יהיה להחזיר אותו אליך אם יימצא אחרי שאבד או נגנב.</li>
+<li dir="rtl">אם תנהל/י מאגר מידע גנטי של הפרות ברפת שלך, אפשר יהיה לזהות פרה שנגנבה, אפילו אם הפכה כבר לסטייק.</li>
+<li dir="rtl">אם תנהל/י מאגר מידע גנטי של הזרים במדינה שלך, ואחת מהן <a href="http://www.ynet.co.il/articles/0,7340,L-4414756,00.html" target="_blank">תירצח וגופתה תבותר לבלי היכר</a>, אפשר יהיה לזהות אותה בקלות.</li>
+</ul>
+<p dir="rtl">כלומר, בתמורה להורדתם של אותם אנשים לדרגת כלב או פרה הם מקבלים צ&#8217;ופר: &#8220;אם תירצחו ותבותרו, נזהה מי אתם&#8221;. זה בטח שימושי לפעמים. לא?<br />
+אז זהו, שלא ממש: מספר הגופות המבותרות לבלי היכר הוא קטן במיוחד, ומספרן של אלה שלא מזהים אותן באמצעים אחרים (למשל צילומי שיניים שנמסרים בהסכמת המשפחה) קטן עוד יותר.<br />
+יוצא שפרס הניחומים הזה עבור חרותם של אותם זרים עלוב במיוחד, אבל הם זרים ואף אחד לא שואל אותם.</p>
+<p dir="rtl">בכל מקרה, שאף אחד לא ינסה למכור לכם את &#8220;צ&#8217;ופר הגוויה במזוודה&#8221; כסיבה למסור נתונים ביומטריים במסגרת הפיילו</p>
+
+          </div>
+        </div>
       </div>
     </div>
 
