--- a/html/post-bagatz.html
+++ b/html/post-bagatz.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <div dir="rtl" id="stcpDiv"><strong><a href="http://www.acri.org.il/he/?p=1750" target="_blank">העתירה, מסמכי משרד הפנים וחומרים נוספים</a> באתר האגודה לזכויות האזרח</strong></div>
 <h4 dir="rtl">אחרי פסיקת בג&#8221;ץ, 23/7/2012</h4>
 <ul dir="rtl">
