--- a/html/post-catching-criminal.html
+++ b/html/post-catching-criminal.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p>עבריינים רבים יודעים להימנע מהשארת פרטים מזהים בזירה, לכן מאגר ביומטרי לא יהיה יעיל נגדם. בפועל, המאגר יאפשר הטרדה ולעיתים אפילו הפללה של אזרחים שכל חטאם היה הימצאות בסמוך לזירת פשע. כל חקירה תספק מאות חשודים פוטנציאליים, והמשטרה תצטרך להשקיע עבודה רבה בחקירתם, במקום בחקירת הפשע עצמו.</p>
 
           </div>
