--- a/html/post-doron-ofek-democracy.html
+++ b/html/post-doron-ofek-democracy.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">לא מעט נכתב על הסכנות של דליפת המאגר הביומטרי, פריצתו וגניבת זהות ממנו. נקודה שזוכה למעט פחות חשיפה היא היכולת של השלטון/הממשל לעשות שימוש במאגר שכזה – שימוש שלא הוגדר בחוק.</p>
 <h3 dir="rtl">מהי הדמוקרטיה הישראלית?</h3>
 <p dir="rtl">אני לא הולך להיכנס לנבכי ההיסטוריה והדרך שבה אנו מממשים דמוקרטיה, אבל אציין מספר דברים הקשורים לכך. לדמוקרטיה הישראלית אין היסטוריה דמוקרטית כמו זו שיש במדינות מערביות אחרות. לדוגמה, באנגליה הדמוקרטיה מתקיימת כבר מאות שנים, ואילו אצלנו היא צעירה יחסית (כמה עשרות שנים בסה“כ). מצד שני, אין לנו כלים שמגינים עלינו, האזרחים, או על הדמוקרטיה עצמה. לדוגמה, אצל האמריקאים יש חוקה, אשר מהווה מערכת חוקים שמגינה על האזרחים מפני גורמים שונים (ובכלל זה המדינה). אצלנו, בן גוריון הבטיח חוקה, אבל עד היום לא נכתבה חוקה שכזו. המשמעות היא שאין מערכת או מערכת חוקים שמגינות על האזרח בצורה הבסיסית ביותר.</p>
