--- a/html/post-foreigners.html
+++ b/html/post-foreigners.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">מדינות רבות &#8211; וארה&#8221;ב ביניהן &#8211; מחזיקות מאגר ביומטרי של זרים שמבקרים בהן, מיעוטים, ושאר מיני “אזרחים מדרגה שניה”. הדבר מתאפשר מהסיבות הבאות:</p>
 <ol>
 <li dir="rtl">אזרח יכול לבחור אם לבקר במדינה אחרת או לא, אבל אי אפשר לכפות עליו למסור את את נתוניו הביומטריים.</li>
