--- a/html/post-forgery-statistics.html
+++ b/html/post-forgery-statistics.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">לא ידוע. במשרד הפנים אין נתונים בנוגע לכמה תעודות מזוייפות קיימות כיום בישראל. למרות העדר המידע, &#8220;נתון&#8221; שכזה הובא פעמים רבות (<a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=36m26s" target="_blank">ובלהט</a>) כדי להצדיק לכאורה את הקמת המאגר: <em>&#8220;יש כיום 350,000 תעודות זהות מזוייפות בישראל&#8221;.</em></p>
 <p dir="rtl">גם אם נתון זה היה נכון, תעודת זהות חכמה <strong>בלי מאגר</strong> <a href="https://www.youtube.com/watch?v=vAmRogyy3Ic&amp;t=48m40s" target="_blank">היתה פותרת את הבעיה בכ-99% המקרים</a> (ואת האחוז הנוסף בו פקיד עשוי להנפיק תעודה מזוייפת עקב הונאה/שוחד/סחיטה/וכו&#8217; עדיף היה לפתור באמצעות <strong>עבודת</strong> בילוש, ולא על ידי הפיכתנו ל<a href="http://no2bio.org/the-problem/" target="_blank">מדינת בילוש</a> כ&#8221;אמצעי יעול&#8221; ש&#8221;יחסוך&#8221; עבודה כזו).</p>
 <p dir="rtl">למרות הכל &#8211; מופרכות הנתון הזה <strong>מעידה על רמת הרצינות של קברניטי המאגר</strong>, לכן חשוב לראות מה אומר על הנושא <a href="http://is.gd/mevaker2010tz" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>:</p>
