--- a/html/post-know-more.html
+++ b/html/post-know-more.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">צמד המלים “המאגר הביומטרי” הפך לשגור בתקשורת בשנים האחרונות, כהכנה למציאות חדשה שנרקמה, בעיקר מאחורי הקלעים, במסדרונות הכנסת. רבות נעשה כדי לקדם את המציאות הזו, שבה בישראל קיים מאגר ביומטרי, אבל מעט מאוד נעשה כדי לעזור לציבור הרחב להבין במה מדובר ומה הן ההשלכות של המאגר על חיי כולנו. עבור מי שמכירים את ההשלכות והסכנות, המסלול המהיר אל המאגר הביומטרי הוא מדרון חלקלק, אל מצב שבו הפרטיות של אזרחי מדינת ישראל מופקרת &#8211; בידי המדינה ושלוחותיה, כמו גם בידי גורמים בעלי אינטרס זר.</p>
 <p dir="rtl">חסרונו של שיח ציבורי בעניין הוליד בלבול ודיס-אינפורמציה ביחס לתחום. ראשית, כדאי להבדיל בין תחום הזיהוי הביומטרי והמאגר הביומטרי עצמו. זיהוי ביומטרי הוא שם למגוון טכניקות שנועדו לזהות בני אדם על פי תכונות פיזיולוגיות או התנהגותיות. השימוש בזיהוי ביומטרי הוא לרוב לצורך בקרת גישה, למשל כדי לאפשר גישה בלעדית לרכוש מאובטח על ידי סריקת טביעת האצבע בכניסה לחדר או ברכב.</p>
 <p dir="rtl">תעודת הזהות הביומטרית, למשל, משתמשת בטכנולוגיה הזו. הטכנולוגיה הזו מונעת התחזות. הקלות שבה ניתן כיום לזייף תעודות היתה אחד הטיעונים שבאמצעותם קודם חוק המאגר הביומטרי, אך חשוב לדעת – בין יצירת תעודות שבהן מצוי המידע הביומטרי, לבין שמירת אותו מידע במאגר שמידת בטיחותו מוטלת בספק, יש מרחק גדול. המרחק שבין צורך בטחוני מיידי של האזרחים והמדינה לבין אילתור פרימיטיבי חסר מודעות בסיסית לאבטחה.</p>
