--- a/html/post-mevaker.html
+++ b/html/post-mevaker.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <h4 dir="rtl"><a href="http://www.mevaker.gov.il/serve/contentTree.asp?bookid=595&amp;id=193&amp;contentid=11664&amp;parentcid=undefined&amp;bctype=11663&amp;sw=1280&amp;hw=730#thisTr64" target="_blank">המסמך באתר מבקר המדינה</a></h4>
 <p dir="rtl"><a href="http://technation.themarker.com/internet-technologies/1.1768804" target="_blank">דה מארקר</a>: דו&#8221;ח מבקר המדינה שמתפרסם היום, מותח ביקורת חריפה על התנהלות משרד הפנים בקידום תעודות הזהות החכמות, ומצביע על שורת מחדלים בהליך קבלת ההחלטות וניהול התקציבים בנושא</p>
 <p dir="rtl"><strong><a href="http://www.ynet.co.il/articles/0,7340,L-4069810,00.html" target="_blank">ווינט</a></strong>: <span><span>משרד המבקר ביקש, לפי הדו&#8221;ח, &#8220;לעיין במסמכים המתעדים את תהליך קבלת ההחלטות שנעשה במשרד הפנים בדבר הכללת אמצעי זיהוי ביומטריים בתעודות הזהות&#8221;, אולם כשפנה למנכ&#8221;ל משרד הפנים שהתחלף מאז, זה ענה כי אין מסמכים שמתעדים את התהליך&#8221;.</span></span></p>
