--- a/html/post-music.html
+++ b/html/post-music.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">כדי להציע לנו מוזיקה, השתמשו ב<a href="https://twitter.com/search?q=%23Songs2SayNo2Bio" target="_blank">טוויטר</a> או <a href="https://facebook.com/hashtag/Songs2SayNo2Bio" target="_blank">פייסבוק</a> בתגית Songs2SayNo2Bio#</p>
 <p dir="rtl" align="center"><a href="https://www.youtube.com/playlist?list=PLJMShZxtd3i9VBuPhkiC4pFv8g0IckYrc" target="_blank">לצפיה ב-YouTube</a></p>
 <p align="center"><iframe src="//www.youtube-nocookie.com/embed/videoseries?list=PLJMShZxtd3i9VBuPhkiC4pFv8g0IckYrc" height="253" width="450" style="max-width:100%" allowfullscreen="allowfullscreen" frameborder="0"></iframe></p>
