--- a/html/post-pilot-knesset-protocol.html
+++ b/html/post-pilot-knesset-protocol.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">אמר אוסקר וויילד: מי שרוצה לשמור על החוק או לאכול נקניקיות, עדיף שלא ידע איך הכינו אותם. ומי שרוצה להשתתף בפיילוט?</p>
 <p dir="rtl">אתם מוזמנים לקרוא את <a href="http://www.scribd.com/doc/59522947/2011-06-02" target="_blank">פרוטוקול ועדת הפנים מיום 2/6/2011</a>  ולצחוק או לבכות. סיכום ופרשנות מצחיקים/עצובים עוד יותר אפשר למצוא בכתבה <a href="http://www.digitalwhisper.co.il/files/Zines/0x17/DW23-2-Pilot.pdf" target="_blank">איך לא עושים פיילוט</a> של עו&#8221;ד יונתן קלינגר שהופיעה <a href="http://www.digitalwhisper.co.il/issue23" target="_blank">במגזין Digital Whisper</a>.<br />
 <iframe id="doc_27818" src="http://www.scribd.com/embeds/59522947/content?start_page=1&amp;view_mode=slideshow&amp;access_key=key-1snzexsokonu60ybv3xt" height="600" width="100%" frameborder="0" scrolling="no" data-auto-height="false" data-aspect-ratio="0.706697459584296"></iframe></p>
