--- a/html/post-webmasters.html
+++ b/html/post-webmasters.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <h3 dir="rtl"><span style="font-size: 1.17em;">להתקין ווידג&#8217;ט</span></h3>
 <p dir="rtl">אם יש לכם בלוג או אתר, תוכלו להתקין ווידג&#8217;ט עדכונים דומה לזה שאתם רואים משמאל (רק בצבע אפור. הולך עם כל דבר <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' /> ).<br />
 הכניסו לתיבת טקסט חופשי את הקוד:</p>
