--- a/html/post-what-are-the-dangers.html
+++ b/html/post-what-are-the-dangers.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p>תעודת זהות ביומטרית יכולה רק לקשר בין התעודה לפנים או לטביעות אצבע של אדם בודד. מאגר נתונים ביומטריים של אוכלוסיה גדולה מאפשר את הכיוון ההפוך: לקשר בין פנים או טביעות אצבע לבין נתונים אחרים שנאגרו על אזרח. אם, למשל,  אפשר לצלם אדם, להשוות את התמונה למאגר וכך לגלות את מספר הזהות שלו, אפשר גם לדעת את כל הפרטים שמרשם האוכלוסין (<a href="http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">שכבר דלף</a>) יכול לספק, כמו כתובת, מצב משפחתי ועוד. אפשר היה לפתור את הבעיות שנוצרו בעקבות דליפת מרשם האוכלוסין לו היו מחליפים את מספרי תעודות הזהות של כל התושבים, ובכך הופכים את המידע שדלף ללא רלוונטי, אבל מאגר ביומטרי יחליף את המספר הזה בנתונים שאי אפשר להחליף אותם, כמו הפנים והאצבעות שלנו, לכן דליפה שלו אינה ניתנת לתיקון.</p>
 
           </div>
