--- a/html/post-bio-ad-meme.html
+++ b/html/post-bio-ad-meme.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">הנה שני מימים על בסיס הקמפיין של ניסוי המאגר הביומטרי, שהוסיפו להם סיסמאות  באתר drpm.me.</p>
 <p dir="rtl">לחצו על תמונה כדי להגיע לדף המים שלה.</p>
 <p dir="rtl">אפשר להפיץ אותם, או ליצור אחרים עם סיסמאות משלכם.</p>
