--- a/html/post-biometric-card.html
+++ b/html/post-biometric-card.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p>תעודות זהות ביומטריות הן תעודות חכמות שהשבב הדיגיטלי שלהן מכיל גם נתונים ביומטריים, המאפשרים לזהות אדם על פי נתוני גופו, למשל טביעות אצבעות ומבנה הפנים. אפשר לחבר אותן למערכת שכוללת מצלמת וידאו או סורק טביעות אצבעות, ולאשר שטביעת האצבע או הפנים אכן שייכות לבעל התעודה, אך אי אפשר להעתיק את הנתונים הביומטריים מתוך התעודה.</p>
 
           </div>
