--- a/html/post-current-status.html
+++ b/html/post-current-status.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,10 +152,11 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <ul>
 <li dir="rtl"><strong>8/7/13:</strong> <a href="http://www.ynet.co.il/articles/0,7340,L-4401747,00.html" target="_blank">הפיילוט למאגר מתחיל</a> בלשכות האוכלוסין בראשון לציון ואשדוד.</li>
-<li dir="rtl"><strong>23/7/12:</strong> בג&#8221;ץ <a href="http://uti.org.il/elgg/bookmarks/view/982/" target="_blank">דחה את העתירה</a> בטענה שהיא מוקדמת מדי, אך הורה למדינה להוציא צו פיילוט התואם את החוק</li>
-<li dir="rtl"><strong>20/2/12:</strong> הוגשה <a href="http://is.gd/bagatz2bio" target="_blank">עתירה לבג&#8221;ץ</a> נגד המאגר הביומטרי</li>
+<li dir="rtl"><strong>23/7/12:</strong> בג&#8221;ץ <a href="http://no2bio.org/bagatz/" target="_blank">דחה את העתירה</a> בטענה שהיא מוקדמת מדי, אך הורה למדינה להוציא צו פיילוט התואם את החוק</li>
+<li dir="rtl"><strong>20/2/12:</strong> הוגשה <a href="http://no2bio.org/bagatz/" target="_blank">עתירה לבג&#8221;ץ</a> נגד המאגר הביומטרי</li>
 <li dir="rtl"><strong>16/5/11:</strong> ועדת השרים ליישומים ביומטריים התעלמה מה&#8221;פשרה&#8221; ו<a href="http://www.haaretz.co.il/captain/spages/1228081.html" target="_blank">החליטה</a>, בין השאר, לוותר על אבטחת נתוני המאגר (שיטת עדי שמיר) שנועדה למנוע <a href="http://www.youtube.com/watch?v=vhaMEmHs56A" target="_blank">דליפה וניצול לרעה</a> של המידע.</li>
 <li dir="rtl"><strong>8/12/09:</strong> <a href="http://www.calcalist.co.il/internet/articles/0,7340,L-3368930,00.html" target="_blank">גירסה</a> דורסנית יותר של &#8220;המאגר ההתנדבותי&#8221;, עם סנקציות נגד מי שלא יתנדב, <a href="http://www.ynet.co.il/articles/0,7340,L-3752320,00.html" target="_blank">עברה קריאה שניה ושלישית</a>.</li>
 <li dir="rtl"><strong>17/11/09:</strong> פשרה כביכול של מאגר וולונטרי ודחיית החקיקה בשנתיים הוצעה על ידי ועדת השרים לבדיקת החוק. מדובר באותו מאגר מסוכן, רק בלי חקיקה ודיון לגבי נחיצותו או אבטחתו.</li>
@@ -179,7 +182,7 @@
 </li>
 </ul>
 <p dir="rtl" id="oknesset" align="center">לא נשכח בקלפי מי <a href="http://oknesset.org/vote/652/" target="_blank">הצביע</a> בעד רמיסת הפרטיות שלנו (באדיבות <a title="כבוד לצוות הסדנה לידע ציבורי" href="http://oknesset.org" target="_blank">כנסת פתוחה</a>):</p>
-<p><iframe id="embed-widget" style="width: 505px; height: 375px;" src="https://oknesset.org/bill/4194/embed/" height="240" width="320" frameborder="0"></iframe></p>
+<p><iframe id="embed-widget" style="width: 450px; max-width: 100%; height: 375px;" src="https://oknesset.org/bill/4194/embed/" height="240" width="320" frameborder="0"></iframe></p>
 
           </div>
         </div>
