--- a/html/post-database-uses.html
+++ b/html/post-database-uses.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p>במקור, המאגר יועד למניעת הרכשה כפולה בלבד, וכדי למנוע שימוש לרעה וזיהוי אנשים ללא תעודה, הוצעו פתרונות טכניים שנדחו על ידי הממשלה בגלל התנגדות המשטרה, שרוצה אפשרות לזהות אנשים גם ללא תעודה. לפי התכנון, תוכל המשטרה להוציא צו בבית משפט ולהשתמש במאגר בכל חקירה, כולל חקירות של עבירות טריוויאליות, שמוגדרות בחוק כ&#8221;עוון&#8221;. לדוגמה, &#8220;הפרעה לסדר הציבורי&#8221; היא עוון, וכך גם טיול עם כלב שאינו קשור.</p>
 
           </div>
