--- a/html/post-the-problem.html
+++ b/html/post-the-problem.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">תעודות הזהות שלנו מורכבות מפלסטיק, נייר ותמונה. כבר בשנות ה-90 של המאה הקודמת היה ברור שעם ההתפתחות הטכנולוגית, נוצרות (והולכות ומחריפות) שתי בעיות:</p>
 <ol>
 <li dir="rtl">בעיה של הממשל: קל לזייף תעודות</li>
