--- a/html/post-what-can-be-done.html
+++ b/html/post-what-can-be-done.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">ביום שבו יתחיל רשמית הניסוי (הפיילוט) של המאגר הביומטרי, אפשר וכדאי יהיה לסרב להשתתף בו, משתי סיבות.</p>
 <ul dir="rtl">
 <li><strong>בטיחות אישית:</strong> הדרך היחידה למנוע מהנתונים שלך לדלוף, היא לא לאגור אותם מלכתחילה. ברגע שהנתונים שלכם יישמרו במאגר כלשהו, איש לא יוכל לערוב לאבטחה שלהם. גם בדברי ההסבר של משרד הפנים להצעת החוק, הודו שיש במאגר סכנה גדולה לפרטיות. למשרד הפנים יש היסטוריה מבישה בתחום של דליפות מידע. לאור ההתפתחויות בשנים האחרונות בתחום ההתקפות על מערכות ממוחשבות, אין סיבה להפקיד בידיו, או בידי כל גוף אחר, מידע כה רגיש. עצם ההחלטה לאגור מידע כזה מעידה על חוסר התמצאות גמור בתחום.</li>
