--- a/html/post-what-is-bio-db.html
+++ b/html/post-what-is-bio-db.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p dir="rtl">מאגר ביומטרי הוא מאגר מוחשב של נתונים ביומטריים (למשל טביעות אצבעות ותווי פנים). בניגוד ל<strong>תעודת זהות</strong> ביומטרית, שמגינה על הנתונים שבתוכה מפני דליפה, מאגר ביומטרי הוא אוסף דיגיטלי של הנתונים הללו, שנשמר באופן בר-חיפוש. מאגר כזה מאפשר <strong>זיהוי של אדם בלי צורך בתעודה, ללא הסכמתו ולפעמים גם ללא ידיעתו </strong>(למשל זיהוי אנשים שמופיעים בתמונות מהפגנות או ברשתות חברתיות).</p>
 <p dir="rtl">ההבדל בין מאגר של נתונים ביומטריים למאגר אחר, למשל של סיסמאות או של כרטיסי אשראי, הוא שסיסמה או כרטיס אשראי אפשר לבטל ולהחליף במקרה שהם דלפו, ואצבעות ותווי פנים לא. הנחת היסוד שעומדת בבסיס הקמת מאגר ביומטרי היא שלעולם לא תהיה דליפה שלו.</p>
 <p>&nbsp;</p>
