--- a/html/post-will-it-be-protected.html
+++ b/html/post-will-it-be-protected.html
@@ -99,6 +99,8 @@
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
+
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
                           <li><a href="post-smbc-comics-nothing-to-hide.html">קומיקס להדפסה</a></li>
@@ -150,6 +152,7 @@
         </div>
         <div class="row">
           <div class="span12">
+            
             <p>בניגוד לתעודת זהות ביומטרית, שכאמור, מגינה על הנתונים הביומטריים שלנו, המאגר הביומטרי הוא כמו כל מאגר מידע אחר ואינו חסין מפני הדלפות ופריצות. ככל שהמידע רגיש יותר, כמו במקרה של המאגר הביומטרי, גדלה האטרקטיביות שלו. מידע יכול לדלוף בכמה דרכים: האנשים שמופקדים על שמירתו ועל השימוש בו <a href="http://www.haaretz.co.il/captain/net/1.1176417" target="_blank">יכולים להדליף אותו</a>, לפעמים ניתן להאזין לתקשורת בין גורמים שונים במערכת (למשל בין המכשיר שמזהה אותך לבין המאגר), או לפרוץ למאגר עצמו. בכל מקרה, את המידע שדלף ומועבר בין גורמים שונים או ניתן להורדה ברשת, לא ניתן להשיב. לאחרונה <a href="http://www.haaretz.co.il/news/law/1.1529808" target="_blank">נחשפו האחראים</a> להדלפת מרשם האוכלוסין. החשיפה מאפשרת <strong>להעניש</strong> אותם, אך אין לה <strong>שום משמעות מעשית</strong> כי הנתונים שלנו עדיין נגישים לכל מי שרוצה להשתמש בהם לרעה.</p>
 
           </div>
