--- a/html/post-bill-to-cancel-bio-db.html
+++ b/html/post-bill-to-cancel-bio-db.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>m.No2Bio - עקבו אחר החוק לביטול המאגר</title>
+    <title>m.No2Bio - הצביעו בעד החוק לביטול המאגר</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
@@ -89,6 +89,8 @@
 
                           <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
 
+                          <li class="active"><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
@@ -98,8 +100,6 @@
                           <li><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
-                          <li class="active"><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
 
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
@@ -147,21 +147,21 @@
       <div class="container">
         <div class="page-header text-center">
           <div class="span12">
-            <h2>עקבו אחר החוק לביטול המאגר</h2>
+            <h2>הצביעו בעד החוק לביטול המאגר</h2>
           </div>
         </div>
         <div class="row">
           <div class="span12">
             
             <p dir="rtl" style="text-align: right;">ל<a href="http://oknesset.org/bill/6751/" target="_blank">הצעת החוק שהוגשה במרץ 2013 </a>ועניינה ביטול חובת המאגר הביומטרי מחוק תעודות מזהות מצטרפים עוד ועוד חברי וחברות כנסת. לאור פעולות הסברה מצד התנגדים והלך הרוח בציבור, חברי כנסת במעגלים מתרחבים מבינים כי קהל הבוחרים שלהם לא יעריך תמיכה במאגר הביומטרי. חברי כנסת ממפלגות יש עתיד, הליכוד-ביתנו, חד&#8221;ש, העבודה, מרצ ואגודת ישראל הביעו ספקות באשר לנחיצות המאגר וככל שעובר הזמן ומתבהרת התמונה מביעים התנגדות נחרצת אליו.</p>
-<p><iframe id="embed-widget" style="width: 450px; max-width:100%; height: 375px;" src="http://oknesset.org/bill/6751/embed/" height="240" width="320" frameborder="0"></iframe></p>
+<p><iframe id="embed-widget" style="width: 450px; max-width: 100%; height: 375px;" src="http://oknesset.org/bill/6751/embed/" height="240" width="320" frameborder="0"></iframe></p>
 <h3 dir="rtl" style="text-align: right;">לשון החוק</h3>
 <p dir="rtl" style="text-align: right;">&#8220;חקיקת חוק הכללת אמצעי זיהוי ביומטריים ונתוני זיהוי ביומטריים במסמכי זיהוי ובמאגר מידע עוררה מחלוקת בקרב הציבור. החוק העלה שאלות רבות בדבר הגנה על זכויות היסוד של הפרט, בדגש על המחיר הכבד אותו עלולים לשלם האזרחים שפרטיהם יכללו במאגר המידע שיוקם מכוחו במידה והמאגר ייפרץ, כפי שצופות מרבית התחזיות על רקע התופעה הכלל עולמית של פריצות לאתרים מאובטחים.</p>
 <p dir="rtl" style="text-align: right;">בפריצות שהיו למאגרים עד כה, דוגמת הפריצה למאגר מרשם האוכלוסין, נחשפו לא פעם פרטים אישיים או מידע רגיש. מקרה חשיפת פרטי כרטיסי האשראי שארע בעת האחרונה על ידי האקר מחוץ לישראל, מחזק את הטענות בדבר הסיכון הרב הטמון בקיום מאגרי מידע . במקרה של מאגר מידע ביומטרי, ההשלכות של חשיפת מידע או שימוש לרעה במידע עלולות להיות חמורות בהרבה עקב רגישותו הרבה של המידע ולאור העובדה כי בשונה מפרטי כרטיס האשראי, זהו מידע שלא ניתן להחליפו. כמו כן, קיום המאגר מעלה שאלות בדבר גניבת זהות וזיוף טביעת אצבע שעשויות להיות להם השלכות בלתי הפיכות.</p>
 <p dir="rtl" style="text-align: right;">לאור האמור, מוצע לקבוע כי יש לבטל את הקמת מאגר המידע.</p>
 <p dir="rtl" style="text-align: right;">יש לציין כי בהכנתו העתידית של החוק, יבוטלו במקביל לפרקים ד&#8217; ו-ה&#8217; הסעיפים השונים בחוק המתייחסים לקיומו של המאגר.&#8221;</p>
-<h3 dir="rtl" style="text-align: right;">כיצד לפעול</h3>
-<p dir="rtl" style="text-align: right;">הצעות חוק עוברות שלבים רבים וחולף זמן עד שהן הופכות לחוקים בספר החוקים. על מנת לעקוב אחר הצעת החוק נגד המאגר, <a href="http://oknesset.org/bill/6751/" target="_blank">הצטרפו לצוותי העוקבים של כנסת פתוחה </a>ותנו לחברי הכנסת להבין שהעם &#8211; עינו פקוחה.</p>
+<h3 dir="rtl" style="text-align: right;">כיצד להצביע</h3>
+<p dir="rtl" style="text-align: right;">צריך ללחוץ על &#8220;כניסה לחשבון&#8221; בצד שמאל למעלה ב<a href="http://oknesset.org/" target="_blank">אתר כנסת פתוחה</a> (אפשר להתחבר באמצעות פייסבוק, טוויטר, וכו&#8217;, או לפתוח שם חשבון), ואז &#8211; <a href="http://oknesset.org/bill/6751/" target="_blank">בדף של הצעת החוק -</a> תוכלו להצביע בעד החוק (בצד שמאל, תחת הכותרת &#8220;דעת הקהל&#8221;).</p>
 
           </div>
         </div>
