--- a/html/post-sucker-sticker.html
+++ b/html/post-sucker-sticker.html
@@ -89,6 +89,8 @@
 
                           <li><a href="post-flier.html">הדפיסו פלאיירים</a></li>
 
+                          <li><a href="post-bill-to-cancel-bio-db.html">הצביעו בעד החוק לביטול המאגר</a></li>
+
                           <li><a href="post-webmasters.html">יש לכם אתר?</a></li>
 
                           <li><a href="post-music.html">מוזיקה באווירה ביומטרית</a></li>
@@ -98,8 +100,6 @@
                           <li class="active"><a href="post-sucker-sticker.html">סטיקר “יצאת פראייר”</a></li>
 
                           <li><a href="post-sefach.html">ספח מחאה לת.ז. ישנה</a></li>
-
-                          <li><a href="post-bill-to-cancel-bio-db.html">עקבו אחר החוק לביטול המאגר</a></li>
 
                           <li><a href="post-poster-finger.html">פוסטר/שבלונה: לא עשו אותי באצבע</a></li>
 
