Convert local blog links to mobile links
Perhaps not airtight, but much better than before

--- a/html/post-bill-to-cancel-bio-db.html
+++ b/html/post-bill-to-cancel-bio-db.html
@@ -161,7 +161,7 @@
 <p dir="rtl" style="text-align: right;">לאור האמור, מוצע לקבוע כי יש לבטל את הקמת מאגר המידע.</p>
 <p dir="rtl" style="text-align: right;">יש לציין כי בהכנתו העתידית של החוק, יבוטלו במקביל לפרקים ד&#8217; ו-ה&#8217; הסעיפים השונים בחוק המתייחסים לקיומו של המאגר.&#8221;</p>
 <h3 dir="rtl" style="text-align: right;">כיצד להצביע</h3>
-<p dir="rtl" style="text-align: right;">צריך ללחוץ על &#8220;כניסה לחשבון&#8221; בצד שמאל למעלה ב<a href="http://oknesset.org/" target="_blank">אתר כנסת פתוחה</a> (אפשר להתחבר באמצעות פייסבוק, טוויטר, וכו&#8217;, או לפתוח שם חשבון), ואז &#8211; <a href="http://oknesset.org/bill/6751/" target="_blank">בדף של הצעת החוק -</a> תוכלו להצביע בעד החוק (בצד שמאל, תחת הכותרת &#8220;דעת הקהל&#8221;).</p>
+<p dir="rtl" style="text-align: right;">צריך ללחוץ על &#8220;כניסה לחשבון&#8221; בצד שמאל למעלה ב<a href="http://oknesset.org/" target="_blank">אתר כנסת פתוחה</a> (אפשר להתחבר באמצעות פייסבוק, טוויטר, וכו&#8217;, או לפתוח שם חשבון), ואז &#8211; <a href="http://oknesset.org/bill/6751/" target="_blank">בדף של הצעת החוק</a> &#8211; תוכלו להצביע בעד החוק (בצד שמאל, תחת הכותרת &#8220;דעת הקהל&#8221;).</p>
 
           </div>
         </div>
