--- a/html/post-foreigners.html
+++ b/html/post-foreigners.html
@@ -161,7 +161,7 @@
 <p dir="rtl">גם דליפה של מאגר כזה תסכן ישראלים שמסרו את נתוניהם, אבל מדובר בסיכונים קטנים בהרבה יחסית לדליפת מאגר כמו זה שמשרד הפנים מנסים להקים:</p>
 <ol>
 <li dir="rtl">לארה&#8221;ב יהיה מאגר של <strong>חלק קטן</strong> מאזרחי ישראל (מרכיב חשוב בניתוח פוטנציאל הנזק הגלום בדליפת מאגר הוא החלק היחסי מתוך האוכלוסיה שבאותו מאגר מכסה).</li>
-<li dir="rtl">הוא מזהה ישראלים לפי מספר דרכון (שמתחלף כשמחדשים את הדרכון), בניגוד למספר ת.ז. שמאפשר לחפש אותנו במאגרים של כמעט כל העסקים והמוסדות הישראלים שאנחנו נמצאים איתם במגע (בעיה שתיעוד חכם יכול וצריך למנוע, אך מאגר ביומטרי רק <a href="http://no2bio.org/the-problem/" target="_blank">מחריף</a> אותה).</li>
+<li dir="rtl">הוא מזהה ישראלים לפי מספר דרכון (שמתחלף כשמחדשים את הדרכון), בניגוד למספר ת.ז. שמאפשר לחפש אותנו במאגרים של כמעט כל העסקים והמוסדות הישראלים שאנחנו נמצאים איתם במגע (בעיה שתיעוד חכם יכול וצריך למנוע, אך מאגר ביומטרי רק <a href="post-the-problem.html" target="_blank">מחריף</a> אותה).</li>
 </ol>
 <p dir="rtl">
 
