--- a/html/post-the-problem.html
+++ b/html/post-the-problem.html
@@ -160,7 +160,7 @@
 </ol>
 <h3 dir="rtl">איך אפשר לפתור את הבעיות האלה?</h3>
 <h4 dir="rtl">בעיית הזיוף</h4>
-<p dir="rtl">כבר בסוף המאה הקודמת היתה אפשרות לעבור לתעודות זהות חכמות שיש בהן שבב דיגיטלי, המונעות זיופים ומאפשרות ביטול במקרה של אובדן או גניבה. ברגע שאזרח מדווח שהתעודה החכמה שלו אבדה, היא מבוטלת אוטומטית, ולכן אין טעם לגנוב תעודות כאלה, ואכן אז יצא המכרז הראשון לתעודה חכמה. אם המהלך הזה לא היה מוכשל שוב ושוב על ידי גורמים שונים (ראו <a href="http://no2bio.org/mevaker/" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>), הבעיה כבר היתה נפתרת.</p>
+<p dir="rtl">כבר בסוף המאה הקודמת היתה אפשרות לעבור לתעודות זהות חכמות שיש בהן שבב דיגיטלי, המונעות זיופים ומאפשרות ביטול במקרה של אובדן או גניבה. ברגע שאזרח מדווח שהתעודה החכמה שלו אבדה, היא מבוטלת אוטומטית, ולכן אין טעם לגנוב תעודות כאלה, ואכן אז יצא המכרז הראשון לתעודה חכמה. אם המהלך הזה לא היה מוכשל שוב ושוב על ידי גורמים שונים (ראו <a href="post-mevaker.html" target="_blank">דו&#8221;ח מבקר המדינה 2010</a>), הבעיה כבר היתה נפתרת.</p>
 <p dir="rtl">ביומטריה (ללא מאגר) היא טכנולוגיה שהתפתחה מאוחר יותר, ויכולה להגן על הממשל מפני תחמנויות של האזרח. אדם לא יוכל, למשל, להצביע בשם אביו החולה (אפילו לא בהסכמתו).</p>
 <p dir="rtl">הנתונים הביומטריים של האזרח נשמרים על התעודה שלו בלבד (אלא אם כן היתה הדלפה פלילית בזמן הנפקת התעודה או בעמדות הזיהוי), ומשמשים כ&#8221;נצרה&#8221; שמונעת שימוש בתעודה על ידי אדם אחר. עמדת הזיהוי סורקת את המידע הביומטרי (טביעת אצבע או פנים) ומעבירה אותו לשבב שעל התעודה כדי שזה יאשר שזה אכן בעל התעודה. אדם אחר לא יעבור את הזיהוי.</p>
 <p dir="rtl">האם יש צורך בטכנולוגיה כזו? האם היתרונות מצדיקים את העיכוב המסוכן והעלויות הנוספות? אולי לא, אבל לפחות לא מדובר בנזק בלתי הפיך לכל אזרחי המדינה.</p>
@@ -176,7 +176,7 @@
 <p dir="rtl">לבעיה הזאת יכול להיות פתרון פרימיטיבי ופשוט: לא לכתוב מספר על התעודה (בתוך השבב יש מספיק מספרים <img src='http://no2bio.org/wp-includes/images/smilies/icon_smile.gif' alt=':)' class='wp-smiley' />  ). הסופרמרקט רוצה לתת לך כרטיס מועדון? שייתן לך גם מספר (או שבב).</p>
 <p dir="rtl">מצד שני, המדינה יכולה לעזור לאזרחים ולכלכלה אם תפתח תעודה מזהה יחידה שתוכל לזהות את האזרח בפני גופים שונים (מסחריים וממשלתיים) בצורה שתמנע הצלבת מידע: הגורם המזהה (למשל קופה רושמת בחנות) מציג &#8220;רשיון גורם מזהה&#8221; (למשל של רשת הסופרמרקטים), ומקבל בתמורה אישור שזה אכן אזרח, וזה &#8220;מספר ת.ז.&#8221; שלו <strong>עבור הסופרמרקט</strong>. לאותו אזרח יש &#8220;מספרי ת.ז.&#8221; שונים במרפאה, בבנק, וכו&#8217;, וגם אם תהיה דליפת מידע מלאה או חלקית באירגונים האלה, עדיין לא יהיה פשוט לדעת מה המצב הרפואי של בעל חשבון בנק מסויים, האם הוא קונה מזון לא בריא בסופר, ואילו ספרים הוא קורא.</p>
 <h3 dir="rtl">מה נעשה בפועל?</h3>
-<p dir="rtl"><a href="http://no2bio.org/mevaker/" target="_blank">במשך כעשור</a> דחה הממשל את הטיפול בנושא, וכאשר הבעיה נעשתה קריטית, הוא התעקש להתנות את פתרון הבעיה בהקמת מאגר ביומטרי. כלומר, נוצרה הזדמנות להחליף מערכת מיושנת ומסוכנת במערכת מודרנית ובטוחה יותר, אך במקום זה מנסים להכריח אותנו לעבור למערכת מסוכנת הרבה יותר בטענה ש&#8221;אי אפשר לעצור את הקידמה&#8221;.</p>
+<p dir="rtl"><a href="post-mevaker.html" target="_blank">במשך כעשור</a> דחה הממשל את הטיפול בנושא, וכאשר הבעיה נעשתה קריטית, הוא התעקש להתנות את פתרון הבעיה בהקמת מאגר ביומטרי. כלומר, נוצרה הזדמנות להחליף מערכת מיושנת ומסוכנת במערכת מודרנית ובטוחה יותר, אך במקום זה מנסים להכריח אותנו לעבור למערכת מסוכנת הרבה יותר בטענה ש&#8221;אי אפשר לעצור את הקידמה&#8221;.</p>
 
           </div>
         </div>
