--- a/html/post-whats-it-to-me.html
+++ b/html/post-whats-it-to-me.html
@@ -162,7 +162,7 @@
 <p dir="rtl"><strong><a href="http://www.ynet.co.il/articles/0,7340,L-4093369,00.html" target="_blank">לא נקבעו שום מדדים להצלחת הפיילוט</a></strong>, כך שלא ברור מה צריך לקרות כדי שיוחלט שנכשל. אולי בגלל זה נאמר &#8220;<strong>עם‬ ‫החלת החוק&#8221;</strong> ולא &#8220;<strong>אם יוחל החוק</strong>&#8220;.</p>
 <p dir="rtl">אם אכן יוחלט בעוד שנתיים שהפיילוט הצליח, יחויבו כל אזרחי ישראל למסור למדינה דגימות ביומטריות. חלקם אולי יסרבו (ובצדק, כי המאגר לא יפסיק פתאום להיות מסוכן), אבל אפשר יהיה להשתמש בנתוניו הביומטריים של מי שהשתתף בפיילוט גם בלי הסכמתו, ולאפשר לגורמים שונים גישה אליהם.</p>
 <p dir="rtl">גם אם הפיילוט ייכשל בגלל דליפה מלאה או חלקית של המאגר, אתם תהיו שפני הניסוי שעל נתוניהם הביומטריים לא הצליחו לשמור. אין תסריט שבו מי שמשתתף בפיילוט יוצא מורווח.</p>
-<p dir="rtl">בתקופת הניסוי יש לנו זכות <a href="http://no2bio.org/what-can-be-done/">לסרב להשתתף בו באופן מוצהר</a>. בואו ננצל אותה, כל עוד אפשר.</p>
+<p dir="rtl">בתקופת הניסוי יש לנו זכות <a href="post-what-can-be-done.html">לסרב להשתתף בו באופן מוצהר</a>. בואו ננצל אותה, כל עוד אפשר.</p>
 
           </div>
         </div>
