--- a/html/post-doron-ofek-jewish.html
+++ b/html/post-doron-ofek-jewish.html
@@ -37,6 +37,8 @@
 
                           <li><a href="post-catching-criminal.html">האם המאגר הביומטרי יקל על לכידת פושעים?</a></li>
 
+                          <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
+
                           <li><a href="post-whats-it-to-me.html">למה זה נוגע לי?</a></li>
 
                           <li><a href="post-database-uses.html">למה ישמש המאגר?</a></li>
@@ -69,6 +71,8 @@
                           <li><a href="post-bagatz.html">הבג”צ נגד המאגר הביומטרי</a></li>
 
                           <li class="active"><a href="post-doron-ofek-jewish.html">הפתרון היהודי לבעיית המאגר</a></li>
+
+                          <li><a href="post-mfaq.html">ואם כבר נתתי את טביעת האצבע?</a></li>
 
                           <li><a href="post-other-countries.html">מה המצב במדינות אחרות?</a></li>
 
